--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
 </head>
 <body>
 
-    
+    <div id="time">
+        <div class="circle">
+            <di id="hours">00</di>
+        </div>
+        <div class="circle">
+            <di id="minutes">00</di>
+        </div>
+        <div class="circle">
+            <di id="seconds">00</di>
+        </div>
+        <div class="circle">
+            <di id="ampm">AM</di>
+        </div>
+    </div>
     <script src="./javascript.js"></script>
 </body>
 </html>
