--- a/index.html
+++ b/index.html
@@ -10,17 +10,32 @@
 <body>
 
     <div id="time">
-        <div class="circle">
-            <di id="hours">00</di>
+        <div class="circle" style="--clr: #ff2972;">
+            <div class="dots hr_dot"></div>
+            <svg>
+                <circle cx="70" cy="70" r="70"></circle>
+                <circle cx="70" cy="70" r="70" id="hh"></circle>
+            </svg>
+            <div id="hours">00</div>
         </div>
-        <div class="circle">
-            <di id="minutes">00</di>
+        <div class="circle" style="--clr: #fee800;">
+            <div class="dots min_dot"></div>
+            <svg>
+                <circle cx="70" cy="70" r="70"></circle>
+                <circle cx="70" cy="70" r="70" id="mm"></circle>
+            </svg>
+            <div id="minutes">00</div>
         </div>
-        <div class="circle">
-            <di id="seconds">00</di>
+        <div class="circle" style="--clr: #04fc43;">
+            <div class="dots sec_dot"></div>
+            <svg>
+                <circle cx="70" cy="70" r="70"></circle>
+                <circle cx="70" cy="70" r="70" id="ss"></circle>
+            </svg>
+            <div id="seconds">00</div>
         </div>
-        <div class="circle">
-            <di id="ampm">AM</di>
+        <div class="ap">
+            <div id="ampm">AM</div>
         </div>
     </div>
     <script src="./javascript.js"></script>
